force-app/main/default/objects/Account/fields/RiskProfile__c.field-meta.xml
<CustomField>
    <fullName>RiskProfile__c</fullName>
    <defaultValue>&quot;Medium&quot;</defaultValue>
    <label>RiskProfile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>