force-app/main/default/objects/Account/fields/Total_Oportunidades_Abiertas__c.field-meta.xml
<CustomField>
    <fullName>Total_Oportunidades_Abiertas__c</fullName>
    <label>Total Oportunidades Abiertas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>