force-app/main/default/objects/Account/recordTypes/Natural_Person.recordType-meta.xml
<RecordType>
    <fullName>Natural_Person</fullName>
    <active>true</active>
    <label>Natural Person</label>
</RecordType>