force-app/main/default/objects/Account/listViews/Energy_and_Biotech_Accounts.listView-meta.xml
<ListView>
    <fullName>Energy_and_Biotech_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.INDUSTRY</field>
        <operation>equals</operation>
        <value>Biotechnology,Energy</value>
    </filters>
    <label>Energy and Biotech Accounts</label>
</ListView>